<resources>
    <string name="app_name">lilo-xpress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_guest_info_header">STEP 1: GUEST INFORMATION</string>
    <string name="label_full_name">Full Name*</string>
    <string name="label_agency">Agency*</string>
    <string name="text_confirm_receipt">I would like to receive an electronic copy of my Appearance Receipt</string>
    <string name="label_guest_purpose_header">STEP 2: SELECT PURPOSE OF VISIT</string>
    <string name="label_division_to_visit">Division to visit*</string>
    <string name="label_purpose_service">Purpose/Service*</string>
    <string name="label_person_to_visit">Person to visit*</string>
    <string name="label_place_of_origin">Place of Origin*</string>
    <string name="label_mobile_number">Mobile Number*</string>
    <string name="guest_print_header">CESB LETTERHEAD</string>
    <string name="full_name_">Full Name</string>
    <string name="label_agency_and_attached_agency">Agency / Attached Agency</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_division_person_visited">Division / Person Visited</string>
    <string name="label_purpose_of_visit">Purpose of Visit</string>
    <string name="label_temperature_">Temperature</string>
    <string name="label_place_of_origin_">Place of Origin</string>
    <string name="label_pincode">Pin Code</string>
    <string name="label_enter_pin_code">STEP 1: ENTER PIN CODE</string>
    <string name="label_enter_pin_code2">Enter Pin Code*</string>
    <string name="label_good">Good</string>
    <string name="label_okay">Okay</string>
    <string name="label_bad">Bad</string>
    <string name="label_feedback">Feedback</string>
    <string name="label_duration_of_visit">Duration of Visit</string>
    <string name="label_cesbie_information_header">CESBIE INFORMATION</string>
    <string name="label_body_temp">Body Temperature*</string>
    <string name="message_error_fill_all">You must fill all of the required fields.</string>

    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>
    <string name="success_login_msg">Successfully Logged in.</string>
    <string name="label_region">Region*</string>
    <string name="label_city">City*</string>

    <string name="text_declaration">
        I hereby authorize CESB to collect and process data indicated herein support of the
        government\'s effort to control the spread of COVID-19 infection. Furthermore, I
        understand that my personal information is protected by RA 10173 s. 2012 (Data Privacy
        Act) and that I am required by RA 11469 s. 2020 (Bayanihan to Heal as One Act) to
        provide true, correct and complete information.\n\nI understand that failure to answer any question or provide false information can be
        penalized in accordance with the law.
    </string>

    <string name="text_any_contact">
        Have had any contact with any PUI / PUM in the last 14 days?
    </string>

    <string name="text_travel">
        Have you travelled locally / internationally in the last 14 days?
    </string>
    <string name="label_mobile_telephone">Mobile No. / Telephone No.*</string>
</resources>