<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:background="@drawable/shape_rectangle"
        android:backgroundTint="@color/colorWhiteTab"
        tools:visibility="visible"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/background_paper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:cardElevation="8dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.11"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91"
            />

        <TextView
            android:id="@+id/tv_print_header"
            style="@style/LiloTextBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:padding="10dp"
            android:text="@string/guest_print_header"

            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:textSize="40sp"
            />

            <TextView
                android:id="@+id/tv_date_and_time"
                style="@style/LiloTextBody1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:padding="10dp"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_print_header"
                android:background="@color/colorGreyHighlight"
                android:text="07/09/2020 | 04:00PM"
                android:letterSpacing="0.15"
                android:textSize="17sp"
                />

            <TextView
                android:id="@+id/label_fullname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_and_time"
                android:layout_marginTop="8dp"

                style="@style/LiloTextLightHeader1"

                android:text="@string/full_name_"
                />

            <TextView
                android:id="@+id/tv_fullname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_fullname"

                android:gravity="center"
                style="@style/LiloTextBody1"

                android:text="Jhondee Diaz"
                />

            <TextView
                android:id="@+id/label_agency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fullname"
                android:layout_marginTop="8dp"

                style="@style/LiloTextLightHeader1"

                android:text="@string/label_agency_and_attached_agency"
                />

            <TextView
                android:id="@+id/tv_agency_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_agency"

                android:gravity="center"
                style="@style/LiloTextBody1"

                android:text="Agency Name\nAttached Agency Name"
                />

            <TextView
                android:id="@+id/label_email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_agency_name"
                android:layout_marginTop="8dp"

                style="@style/LiloTextLightHeader1"

                android:text="@string/label_email_address"
                />

            <TextView
                android:id="@+id/tv_email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_email_address"

                android:gravity="center"
                style="@style/LiloTextBody1"

                android:text="fjanib@myoptimind.com"
                />

            <TextView
                android:id="@+id/label_divison_person_visited"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email_address"
                android:layout_marginTop="8dp"

                style="@style/LiloTextLightHeader1"

                android:text="@string/label_division_person_visited"
                />

            <TextView
                android:id="@+id/tv_division_person_visited"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_divison_person_visited"

                android:gravity="center"
                style="@style/LiloTextBody1"

                android:text="Division Name / Person Visited"
                />

            <TextView
                android:id="@+id/label_purpose_of_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_division_person_visited"
                android:layout_marginTop="8dp"

                style="@style/LiloTextLightHeader1"

                android:text="@string/label_purpose_of_visit"
                />

            <TextView
                android:id="@+id/tv_purpose_of_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_purpose_of_visit"

                android:gravity="center"
                style="@style/LiloTextBody1"

                android:text="Meeting"
                />

            <TextView
                android:id="@+id/label_temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_purpose_of_visit"
                android:layout_marginTop="8dp"

                style="@style/LiloTextLightHeader1"

                android:text="@string/label_temperature_"
                />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_temperature"

                android:gravity="center"
                style="@style/LiloTextBody1"

                android:text="34.3 C"
                />

            <TextView
                android:id="@+id/label_place_of_origin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_temperature"
                android:layout_marginTop="8dp"

                style="@style/LiloTextLightHeader1"

                android:text="@string/label_place_of_origin_"
                />

            <TextView
                android:id="@+id/tv_place_of_origin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_place_of_origin"

                android:gravity="center"
                style="@style/LiloTextBody1"

                android:text="Quezon City"
                />

            <TextView
                android:id="@+id/label_pin_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/tv_place_of_origin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_pin_code"
                android:layout_marginTop="8dp"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintVertical_chainStyle="packed"

                android:paddingTop="18dp"
                android:background="@color/colorLightBlueHighlight"

                style="@style/LiloTextLightHeader1"
                android:textAllCaps="true"
                android:text="@string/label_pincode"
                />

            <TextView
                android:id="@+id/tv_pin_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/label_pin_code"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1"


                android:paddingBottom="10dp"
                android:gravity="center"
                style="@style/LiloTextBody1"
                android:background="@color/colorLightBlueHighlight"
                android:text="ABC123XYZ"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

   <Button
       android:layout_width="220dp"
       android:layout_height="wrap_content"

       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/background_paper"
       app:layout_constraintBottom_toBottomOf="parent"
       android:background="@drawable/shape_rectangle_round_corners"
       android:backgroundTint="@color/colorBlueTab"
       android:text="PRINT"
       android:textSize="24sp"
       android:elevation="20dp"

       android:textColor="@android:color/white"
       />
</androidx.constraintlayout.widget.ConstraintLayout>